--- a/site/old-news.html
+++ b/site/old-news.html
@@ -18,7 +18,18 @@
 
   <tr>
     <td>
-      <dl
+      <dl>
+  <dt>
+    <b>LilyPond 2.11.31 available</b> -
+    <em>August 31, 2007</em>
+  </dt>
+  <dd>
+    Release 2.11.31 is now available. It has more bugfixes, updates
+    for MusicXML import and lots of updates for the translations.
+    (<a
+	href="http://code.google.com/p/lilypond/issues/list?can=1&amp;q=fixed_2_11_31&amp;colspec=ID+Type+Status+Priority+Milestone+Owner+Summary">Bugfixes</a>, <a href="install/#2.11">Download</a>)
+  </dd>
+
 <dt><b>LilyPond 2.11.28 for FreeBSD x86_64</b> - <em>August 10,
 2007</em></dt>
 
