--- a/site/devel/participating/documentation-adding.html
+++ b/site/devel/participating/documentation-adding.html
@@ -24,7 +24,7 @@
   and lilypond-user mailing lists, so your contributions can be
   efficiently integrated into the GDP.  You can find detailed
   instructions for contributing to GDP
-  at <a href="http://git.sv.gnu.org/gitweb/?p=lilypond.git;a=blob_plain;f=Documentation/user/README.txt;hb=lilypond/gdp">Manuals Readme</a>.
+  at <a href="http://git.sv.gnu.org/gitweb/?p=lilypond.git;a=blob_plain;f=Documentation/user/README.txt;hb=master">Manuals Readme</a>.
 </p>
 
 
