--- a/site/old-news.html
+++ b/site/old-news.html
@@ -20,6 +20,16 @@
     <td>
       <dl>
   <dt>
+    <b>LilyPond 2.11.32 available</b> -
+    <em>September 2, 2007</em>
+  </dt>
+  <dd>
+    Release 2.11.32 is now available.
+    (<a
+	href="http://code.google.com/p/lilypond/issues/list?can=1&amp;q=fixed_2_11_32&amp;colspec=ID+Type+Status+Priority+Milestone+Owner+Summary">Bugfixes</a>, <a href="install/#2.11">Download</a>)
+  </dd>
+
+  <dt>
     <b>LilyPond 2.11.31 available</b> -
     <em>August 31, 2007</em>
   </dt>
