Add links to Andrew Hawryluk's writings and announce 2.11.41

--- a/site/about/automated-engraving/conclusion.html
+++ b/site/about/automated-engraving/conclusion.html
@@ -10,12 +10,21 @@
 
 <h2>Conclusion</h2>
 
-We've shown you what engraved music should look like, and how we built
+<p>
+We have shown you what engraved music should look like, and how we built
 our software to emulate that look.  We have put a lot of effort into
 building it.  Thanks to all that hard work, you can <a
 href="@DEPTH@switch/tour.html">use the program to print nice music
 too</a>.
+</p>
 
+<p>
+To complete the reading of this essay, you may want to have a look at
+<a href="@DEPTH@about/pubs.html">publications and articles</a>,
+especially <a href="http://www.musicbyandrew.ca/finale-lilypond-1.html">Andrew
+Hawryluk's writings</a>, which include Finale and LilyPond notation
+benchmarking.
+</p>
 
 <p align="right">
 Go <a href="index">back</a> to the index.
