--- a/site/about/pubs.html
+++ b/site/about/pubs.html
@@ -40,6 +40,16 @@ What others wrote:
   </a>
   
 <dl>
+  <dt>February 2008</dt>
+  <dd>
+    In <a href="http://www.musicbyandrew.ca/finale-lilypond-1.html">articles
+    on his personal site</a>, Andrew Hawryluk compares Finale and
+    LilyPond in general terms, and evaluates in detail engraving
+    capabilities of both pieces of software.  The second article is an
+    instructive analysis of Rachmaninoff's Piano Prelude 6 engraving,
+    including comparisons with a reference hand-engraved edition.
+  </dd>
+
   <dt>December 2005</dt>
   <dd>
 
