--- a/site/old-news.html
+++ b/site/old-news.html
@@ -20,6 +20,28 @@
     <td>
       <dl>
   <dt>
+    <b>LilyPond 2.11.36 available</b> -
+    <em>December 13, 2007</em>
+  </dt>
+  <dd>
+    Release 2.11.36 is now available. It has many bugfixes, updates
+    for MusicXML import, and it includes major documentation changes from
+    Grand Documentation Project. (<a
+	href="http://code.google.com/p/lilypond/issues/list?can=1&amp;q=fixed_2_11_36&amp;colspec=ID+Type+Status+Priority+Milestone+Owner+Summary">Bugfixes</a>, <a href="install/#2.11">Download</a>)
+  </dd>
+
+  <dt>
+    <b>LilyPond 2.11.33 and 2.10.33 available</b> -
+    <em>September 20, 2007</em>
+  </dt>
+  <dd>
+    Release 2.11.33 is now available.
+    (<a href="http://code.google.com/p/lilypond/issues/list?can=1&amp;q=fixed_2_10_33&amp;colspec=ID+Type+Status+Priority+Milestone+Owner+Summary">Bugfixes
+      2.10</a>, <a href="http://code.google.com/p/lilypond/issues/list?can=1&amp;q=fixed_2_11_33&amp;colspec=ID+Type+Status+Priority+Milestone+Owner+Summary">Bugfixes
+      2.11</a>, <a href="install/#2.11">Download</a>)
+  </dd>
+
+  <dt>
     <b>LilyPond 2.11.32 available</b> -
     <em>September 2, 2007</em>
   </dt>
