German translation Update (Hawryluk's articles)

--- a/de/about/automated-engraving/conclusion.html
+++ b/de/about/automated-engraving/conclusion.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: dfac495ce530710defeff84032b9d75b12bac373
+    Translation of GIT Committish: effb525ee68f4cb5ccc009004dbc8dadad7bd01f
 
 
 
@@ -14,13 +14,23 @@
 
 <h2>Schlusswort</h2>
 
+<p>
 Wir konnten hier zeigen, wie guter Notensatz aussehen sollte und
 wie wir unser Programm gestaltet haben, damit es dieses Aussehen
 nachahmt. Wir haben uns viel M&uuml;he gegeben, um es zu programmieren.
 Dank all der Bem&uuml;hungen kann nun jeder dieses <a
 href="@DEPTH@switch/tour.html">Programm benutzen</a>, um selber sch&ouml;nen
 Notensatz zu erhalten.
+</p>
 
+<p>
+Als Ergänzung zu diesem Aufsatz k&ouml;nnen Sie sich die 
+<a href="@DEPTH@about/pubs.html">Publikationen</a> anschauen, die
+zum Thema LilyPond geschrieben worden sind. Besonders hervorzuheben
+sind die <a href="http://www.musicbyandrew.ca/finale-lilypond-1.html">
+drei Artikel</a> von Andrew Hawryluk über einen Vergleich des Notensatzes
+von LilyPond und Finale.
+</p>
 
 <p align="right">
 <a href="index">Zur&uuml;ck</a> zum Inhalt
