--- a/de/about/pubs.html
+++ b/de/about/pubs.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: dfac495ce530710defeff84032b9d75b12bac373
+    Translation of GIT Committish: effb525ee68f4cb5ccc009004dbc8dadad7bd01f
 
 
 
@@ -45,6 +45,18 @@ Was andere publiziert haben:
   </a>
   
 <dl>
+  <dt>Februar 2008</dt>
+  <dd>
+    In einigen <a href="http://www.musicbyandrew.ca/finale-lilypond-1.html">
+    Artikeln auf seiner Homepage</a> vergleicht Andrew Hawryluk Finale und
+    LilyPond auf allgemeiner Ebene und wertet sehr detailliert die
+    Notensatzf&auml;higkeiten beider Programme aus. Der zweite Artikel in 
+    seiner Reihe bietet eine aufschlussreiche Analyse zum Notensatz von
+    Rachmaninovs Prelude Nr. 6 für Klavier, wobei hier der Notensatz der 
+    beiden Programme zus&auml;tzlich mit einer handgestochenen Version 
+    verglichen wird.
+  </dd>
+
   <dt>Dezember 2005</dt>
   <dd>
 
