--- a/es/about/browser-language.html
+++ b/es/about/browser-language.html
@@ -1,16 +1,16 @@
 <!--
-    Translation of GIT Committish: 471473d1bf9012a6c54fab279eb12e2ea5605b39
+    Translation of GIT Committish: c9c8a55b173151df04eb864643fb740a850e4988
 
     When revising a translation, copy the HEAD committish of the
     version that you are working on.  Refer to `UPDATE A TRANSLATION'
     in README for details.
 !-->
 
-<h1>Uso de la selección autmática de idioma</h1>
+<h1>Uso de la selección automática de idioma</h1>
 
 <P>
-  Para obtener la selección autmática de idioma, debe indicarle a
-  su navegador cuál es su idioma preferido. La forma de hacerlo depende
+  Para obtener selección automática del idioma, debe indicarle al
+  navegador cuál es su idioma preferido. La forma de hacerlo depende
   del navegador que esté utilizando.
 </P>
 
