--- a/es/about/faq.html
+++ b/es/about/faq.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: 78596d6d981bb4cfc3f1c92b098021b56b0cd2c5
+    Translation of GIT Committish: c9c8a55b173151df04eb864643fb740a850e4988
 
     When revising a translation, copy the HEAD committish of the
     version that you are working on.  Refer to `UPDATE A TRANSLATION'
@@ -59,7 +59,7 @@ Las partituras impresas por ordenador frecuentemente carecen de variaciones suti
 <h3>¿Porqué tendría que preocuparme yo por el grabado?</h3>
 <p>
 El buen grabado ayuda a leer la música, haciéndola más fácil de tocar. 
-Por ejemplo, si la distribución refleja el carácter de una pieza, entonces será más fácil de interpretar. Si está espaciada de forma más apretada, ocupara menos páginas, reduciendo el número de vueltas de hoja. Si un sistema (&ldquo;una línea&rdquo;) tiene una distribución horizontal única, entonces es más fácil de encontrar después de echarle una mirada al director. Una parte impresa con símbolos más pesados y líneas más gruesas es más fácil de leer desde una cierta distancia.
+Por ejemplo, si la distribución refleja el carácter de una pieza, entonces será más fácil de interpretar. Si está espaciada de forma más apretada, ocupará menos páginas, reduciendo el número de vueltas de hoja. Si un sistema (una &ldquo;línea&rdquo;) tiene una distribución horizontal única, entonces es más fácil de encontrar después de haberle echado una mirada al director. Una parte impresa con símbolos más pesados y líneas más gruesas es más fácil de leer desde una cierta distancia.
 </p>
 
 <p>
@@ -77,7 +77,7 @@ No. No solamente lo proporcionamos de forma gratuita sino que también lo entreg
 </p>
 
 <p>
-  Pensamos que esto es de mayor importancia que el coste. Significa que tiene la libertad de arreglar, modificar y extender el programa, o puede pagarle a otra persona para que lo haga. No le obligamos a que actualice el programa cuando se abandone el apoyo para su plataforma, y no estará perdido cuando abandonemos el programa.
+  Pensamos que esto es de una importancia mucho mayor que el coste. Significa que tiene la libertad de arreglar, modificar y extender el programa, o puede pagarle a otra persona para que lo haga. No le obligamos a que actualice el programa cuando se abandone el apoyo para su plataforma, y no estará perdido cuando abandonemos el programa.
 </p>
 
 <h2>Acerca del programa</h2>
@@ -113,7 +113,7 @@ Tenemos los siguientes requerimientos. Debe
 </ul>
 
 <p>
-  Pensamos que ninguno de los formatos existentes cubren estos requerimientos. Por ejemplo, MusicXML no se puede escribir a mano, DARMS está limitado en su aplicación, ABC no tiene una definición formal esctricta y NIFF es binario. Sin embargo, esto no le impide usar dichos formatos; existen filtros que realizan la conversión desde varios formatos a <tt>.ly</tt>.
+  Pensamos que ninguno de los formatos existentes cubren estos requerimientos. Por ejemplo, MusicXML no se puede escribir a mano, DARMS está limitado en su aplicación, ABC no tiene una definición formal estricta y NIFF es binario. Sin embargo, esto no le impide usar dichos formatos; existen filtros que realizan la conversión desde varios formatos a <tt>.ly</tt>.
 </p>
 
 <h3>
@@ -122,7 +122,7 @@ Tenemos los siguientes requerimientos. Debe
 <p>
   Eche un vistazo al 
   <a href="@DOC@stable/Documentation/user/lilypond/Tutorial.html">tutorial</a>.
-   Es bastante breve y fácilmente digerible en bocados, y hemos invertido mucho tiempo en pulirlo. Si le gusta aprender experimentando, entonces puede obtener los archivos de ejemplo, haciendo clic sobre las imágenes de música que aparecen en el tutorial.
+   Es bastante breve y se encuentra dividido en bocados de fácil digestión, y hemos invertido mucho tiempo en pulirlo. Si le gusta aprender experimentando, entonces puede obtener los archivos de ejemplo haciendo clic sobre las imágenes de música que aparecen en el tutorial.
 </p>
 
 <h3>¡Dejen de cambiar la sintaxis todo el tiempo!</h3>
@@ -132,12 +132,12 @@ Tratamos de mejorar LilyPond tanto como sea posible, y eso implica que mejorarem
 <p>
   La mayor parte de los cambios en el lenguaje se pueden manejar ejecutando el programa 
   <tt>convert-ly</tt>, que se incluye con LilyPond. Sin embargo,
-  <tt>convert-ly</tt> puede hacer su trabajo cuando sabe la versión para la cuál se creó originalmente en archivo. Por lo tanto, es importante añadir enunciados 
+  <tt>convert-ly</tt> puede hacer su trabajo solamente si sabe la versión para que se creó el archivo originalmente. Por lo tanto, es importante añadir enunciados 
   <code>version</code> a los archivos de la siguiente manera: <xmp>
     \version "1.3.17" </xmp>
 </p>
 <p>
-  Los cambios en el número principal de la versión de LilyPond pueden ser más complicados: convertir de 1.8 a 2.0 requerirá una supervisión.
+  Los cambios que no se pueden tratar mediante ediciones sencillas se caracterizan por un salto en el número principal de la versión: convertir de 1.8 a 2.0 requerirá una supervisión.
 </p>
 
 <h3>¿Qué tan rápido es escribir música con LilyPond?</h3>
@@ -201,9 +201,9 @@ Hay otras opciones: es posible crear música en otro formato. Los formatos conte
 	convierte del formato NWC a LilyPond.  </dd>
 
 	<dt>Band-In-A-Box</dt>
-	<dd> El convertidor de Alain Brenzikofer
-	<a href="http://www.brenzi.ch/builder.php?content=projects_biabconverter">biabconverter</a>
-	convierte archivos de Band-in-a-box en archivos LilyPond.</dd>
+	<dd> El convertidor
+	<a href="http://www.brenzi.ch/builder.php?content=projects_biabconverter">biabconverter</a>,
+	de Alain Brenzikofer, convierte archivos de Band-in-a-box en archivos LilyPond.</dd>
 </dl>
 
 
