--- a/es/about/features.html
+++ b/es/about/features.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: 471473d1bf9012a6c54fab279eb12e2ea5605b39
+    Translation of GIT Committish: c9c8a55b173151df04eb864643fb740a850e4988
 
     When revising a translation, copy the HEAD committish of the
     version that you are working on.  Refer to `UPDATE A TRANSLATION'
@@ -12,27 +12,33 @@
 
 <ul>
   <li>
-    Espaciado, cortes de línea y cortes de página automáticos.
+    Espaciado y saltos automáticos de línea y de página.
   </li>
   <li>
-    Manejo de colisiones polifónicas para las notas, puntillos y silencios.
+    Manejo de colisiones polifónicas para las notas, puntillos y
+    silencios.
   </li>
   <li>
-    Colocación automática de accidentes, barras, ligaduras de expresión y de unión
-    basada en algortimos de puntuaciones óptimas.
+    Colocación automática de alteraciones accidentales, barras,
+    ligaduras de expresión y de unión, basada en algortimos de
+    puntuaciones óptimas.
   </li>
   <li>
-    Los usuarios no requieren experiencia tipográfica
-    para producir una excelente notación.
+    Los usuarios no requieren experiencia tipográfica para producir
+    una excelente notación.
   </li>
   <li>
-    No se requiere interacción por parte del usuario durante la ejecución. Se puede automatizar la ejecución del programa,
-    lo que es conveniente para la conversión en masa de bases de datos de música digitalizada
-    y para la impresión de composiciones algorítmicas.
+    No se requiere interacción por parte del usuario durante la
+    ejecución. Se puede automatizar la ejecución del programa, lo que
+    es conveniente para la conversión en masa de bases de datos de
+    música digitalizada y para la impresión de composiciones
+    algorítmicas.
   </li>
   <li>
-    La fuente tipográfica Feta ha sido preparada especialmente para LilyPond, y se diseñó cuidadosamente para que emulara
-    las mejores partituras grabadas a mano. Está disponible como una fuente tipográfica escalable, y también como una Metafont.
+    La fuente tipográfica Feta ha sido preparada especialmente para
+    LilyPond, y se diseñó cuidadosamente para que emulara las mejores
+    partituras grabadas a mano. Está disponible como una fuente
+    tipográfica escalable, y también como una Metafont.
   </li>
 </ul>
 
@@ -40,61 +46,60 @@
 <ul>
   <!-- todo: add links !-->
   <li>Alteraciones accidentales de advertencia y sugerencias, en estilos clásicos y modernos</li>
-  <li>Indicaciones de ámbito</li>
-  <li>Signos de arpeggio</li>
-  <li>Globos de texto (educación)</li>
-  <li>Barretas</li>
-  <li>Eliminación arbitradia de elementos de notación (educación)</li>
-  <li>Nombres de acordes en francés, italiano e inglés</li>
-  <li>Notación de clusters (racimos) y signos de agrupación rítmica</li>
-  <li>Coloreado de elementos de notación arbitrarios</li>
-  <li>Barras que cruzan los pentagramas</li>
-  <li>Notas guía (automáticas)</li>
-  <li>Líneas de compás en guiones o punteadas</li>
-  <li>Notación de percusión</li>
-  <li>Cabezas de nota estilo EasyNotation</li>
-  <li>Caídas y bends</li>
-  <li>Barras en notaciones modernas</li>
-  <li>Bajo cifrado</li>
-  <li>Digitaciones, incluidas las digitaciones de guitarra para la mano derecha</li>
-  <li>Diagramas de acordes de guitarra</li>
-  <li>Glissandos</li>
-  <li>Notas ornamentales, acciaccatura y appoggiatura</li>
-  <li>Reguladores de crescendo y decrescendo, también con puntas en círculo (al niente)</li>
+  <li>Alteraciones microtonales</li>
   <li>Armónicos</li>
+  <li>Bajo cifrado</li>
+  <li>Barras en notaciones modernas</li>
+  <li>Barras que cruzan los pentagramas</li>
+  <li>Barretas</li>
+  <li>Cabezas de nota estilo EasyNotation</li>
+  <li>Cabezas de notas con diferentes formas</li>
+  <li>Caídas y bends</li>
+  <li>Cita de otros fragmentos musicales, con transposición incluida</li>
+  <li>Coloreado de elementos de notación arbitrarios</li>
+  <li>Corchetes de análisis anidados</li>
+  <li>Corchetes de octava alta y octava baja</li>
+  <li>Diagonales de separación entre los sistemas</li>
+  <li>Diagramas de acordes de guitarra</li>
+  <li>Digitaciones, incluidas las digitaciones de guitarra para la mano derecha</li>
+  <li>Eliminación arbitradia de elementos de notación (educación)</li>
+  <li>Espaciado vertical de los pentagramas utilizando un algoritmo de «skyline»</li>
+  <li>Extensores de letra, guiones y melismas</li>
+  <li>Extracción de particellas: véase Partituras orquestales</li>
+  <li>Formateado de ligaduras para acordes</li>
+  <li>Glissandos</li>
+  <li>Globos de texto (educación)</li>
+  <li>Grupos de valoración especial en divisiones arbitrarias, anidados o con finales quebrables</li>
+  <li>Indicaciones de ámbito</li>
+  <li>Indicaciones metronómicas</li>
+  <li>Inicio y detención de pentagramas a voluntad</li>
   <li>Ligaduras «Laissez vibrer»</li>
   <li>Líneas adicionales, con acortado automático para un espaciado más denso</li>
-  <li>Extensores de letra, guiones y melismas</li>
-  <li>Repeticiones de compás (&ldquo;estilo porcentaje&rdquo;)</li>
-  <li>Notación mensural</li>
+  <li>Líneas de compás en guiones o punteadas</li>
   <li>Microtonos</li>
-  <li>Indicaciones metronómicas</li>
-  <li>Corchetes de análisis anidados</li>
-  <li>Partituras orquestales con combinación de partes automática</li>
-  <li>Ornamentos; mordentes, semitrinos y sus combinaciones</li>
-  <li>Corchetes de octava alta y octava baja</li>
-  <li>Extracción de particellas: véase Partituras orquestales</li>
-  <li>Pedales de Piano</li>
+  <li>Nombres de acordes en francés, italiano e inglés</li>
+  <li>Notación de clusters (racimos) y signos de agrupación rítmica</li>
+  <li>Notación de percusión</li>
+  <li>Notación de tablatura</li>
+  <li>Notación mensural</li>
   <li>Notación polimétrica</li>
   <li>Notación proporcional</li>
-  <li>Alteraciones microtonales</li>
-  <li>Cita de otros fragmentos musicales, con transposición incluida</li>
-  <li>Diagonales de separación entre los sistemas</li>
-  <li>Cabezas de notas con diferentes formas</li>
-  <li>Inicio y detención de pentagramas a voluntad</li>
+  <li>Notas guía (automáticas)</li>
+  <li>Notas ornamentales, acciaccatura y appoggiatura</li>
+  <li>Numeración de cuerdas, también dentro de acordes</li>
+  <li>Ornamentos; mordentes, semitrinos y sus combinaciones</li>
+  <li>Partituras orquestales con combinación automática de partes</li>
+  <li>Pedales de Piano</li>
   <li>Pentagramas, configuración de la cantidad de pautas y posicionamiento individual de las líneas de pentagrama</li>
   <li>Plicas especiales</li>
-  <li>Numeración de cuerdas, también dentro de acordes</li>
+  <li>Reguladores de crescendo y decrescendo, también con puntas en círculo (al niente)</li>
+  <li>Repeticiones de compás (&ldquo;estilo porcentaje&rdquo;)</li>
   <li>Separadores de sistemas</li>
-  <li>Notación de tablatura</li>
-  <li>Formateado de ligaduras para acordes</li>
+  <li>Signos de arpeggio</li>
   <li>Transposición</li>
   <li>Trémolos, tanto para notas aisladas como para acordes</li>
   <li>Trinos, incluidos los trinos continuos y de notas explícitas</li>
-  <li>Grupos de valoración especial en divisiones arbitrarias, anidados o con finales quebrables</li>
-  <li>Espaciado vertical de los pentagramas utilizando un algoritmo de «skyline»</li>
 </ul>
-
 Para ver detalles y ejemplos de música, siga las entradas de la 
 <a href="@DOC@latest/Documentation/topdocs/NEWS">cadena de NOTICIAS</a>
  y eche un vistazo a las
@@ -103,21 +108,21 @@ Para ver detalles y ejemplos de música, siga las entradas de la
 <h2>Diseño robusto</h2>
 <ul>
   <li>
-    No hay límites arbitrarios: número ilimitado de pentagramas, voces, compases, longitud de textos, etc.
+    No hay límites arbitrarios: número ilimitado de pentagramas,
+    voces, compases, longitud de textos, etc.
   </li>
   <li>
-    Procesadores de salida enchufables: salida en formato EPS, PDF, PNG, PostScript,
-    MIDI y SVG.
+    Procesadores de salida enchufables: salida en formato EPS, PDF,
+    PNG, PostScript, MIDI y SVG.
   </li>
   <li>
-	Letra en cualquier idioma.
-  </li>
-
-  <li>
-	Entrada basada en texto con un lenguaje musical versátil.
+    Letra en cualquier idioma.
   </li>
   <li>
-	Programable y extensible gracias a su intérprete LISP integrado.
+    Entrada basada en texto con un lenguaje musical versátil.
+  </li>
+  <li>
+    Programable y extensible gracias a su intérprete LISP integrado.
   </li>
 </ul>
 
@@ -143,7 +148,7 @@ Para ver detalles y ejemplos de música, siga las entradas de la
     <a href="http://nwc2ly.sourceforge.net">Noteworthy Composer</a>.
   </li>
   <li>
-	Editores con soporte especial para LilyPond
+    Editores con apoyo especial para LilyPond
     <a href="http://git.sv.gnu.org/gitweb/?p=lilypond.git;a=tree;f=elisp">Emacs</a>,
     <a href="http://git.sv.gnu.org/gitweb/?p=lilypond.git;a=tree;f=vim">Vim</a>,
     <a href="http://www.jedit.org">JEdit</a>,
