--- a/es/about/thanks.html
+++ b/es/about/thanks.html
@@ -1,12 +1,12 @@
 <!--
-    Translation of GIT Committish: 67efa73196fd10c31c10ef9983426ac2df63dd86
+    Translation of GIT Committish: c9c8a55b173151df04eb864643fb740a850e4988
 
     When revising a translation, copy the HEAD committish of the
     version that you are working on.  Refer to `UPDATE A TRANSLATION'
     in README for details.
 !-->
 
-<h2>LilyPond ha sido construido para usted por</h2>
+<h2>LilyPond se ha construido para usted por</h2>
 
 <ul>
   <li>Han-Wen Nienhuys y Jan Nieuwenhuizen, desarrolladores principales
@@ -24,12 +24,9 @@ completamente distinto. Lo que creamos se conoce ahora como LilyPond.
 	</p>
   </li>
 
-  <li>Graham Percival, editor de la documentación
+  <li>Graham Percival, editor de la documentación y Bug Meister (Maestro a cargo de los Fallos)
 	<p>
-Graham actualmente estudia viola en la Universidad de Victoria (Canadá),
-a pesar de haber tocado la viola durante dos años y violoncello durante veinte.
-Cuando no está inmerso en trabajo académico o en la documentación de LilyPond, compone
-música tonal.
+Graham es un estudiante graduado que trabaja en  proyectos de entrenamiento de instrumentos musicales asistido por ordenador.  Su interés se centra en la escritura de software para el apoyo al aprendizaje del violín, la viola o el cello por parte de los alumnos.
 	</p>
   </li>
 
@@ -41,9 +38,8 @@ y hackeando algo de código.
 	</p>
   </li>
 
-  <li>Erik Sandberg, Bug meister</li>
 
-  <li>Mats Bengtsson, gurú de soporte.</li>
+  <li>Mats Bengtsson, gurú de apoyo.</li>
 
 </ul>
 
@@ -66,7 +62,7 @@ href="@DOC@latest/Documentation/topdocs/AUTHORS.html">hackers de LilyPond</a>,  
 <ul>
 	<li>Werner Lemberg por su TeXperiencia</li>
 	<li>David Chan y Chris Sawer, por poner en marcha el archivo Mutopia</li>
-	<li>Matthias Neeracher, por mantener la distribución fink de MacOS X actualizada.</li>
+	<li>Matthias Neeracher, por mantener al día la distribución para MacOS X fink</li>
 	<li>Paul Roberts y James Ingram, por los consejos sobre grabado musical</li>
 	<li><a href="http://www.stumptuous.com">Krista Scott-Dixon</a>, por la fotografía del nenúfar.</li>
 </ul>
