--- a/es/about/pubs.html
+++ b/es/about/pubs.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: 67efa73196fd10c31c10ef9983426ac2df63dd86
+    Translation of GIT Committish: c9c8a55b173151df04eb864643fb740a850e4988
 
     When revising a translation, copy the HEAD committish of the
     version that you are working on.  Refer to `UPDATE A TRANSLATION'
@@ -30,9 +30,6 @@ Lo que nosotros hemos escrito:
 
 Lo que han escrito otros:
 
-  <a href="@IMAGES@lj-cover140.png">
-    <img src="@IMAGES@lj-cover140-small.png" align="right" alt="linux journal cover">
-  </a>
   
 <dl>
   <dt>Diciembre de 2005</dt>
@@ -48,9 +45,12 @@ Lo que han escrito otros:
     Este artículo ahora está disponible <a href="http://www.linuxjournal.com/article/8583">en línea</a>.
     
   </dd>
-  
+
   <dt>20 de agosto de 2005</dt>
-  <dd>
+  <dd>     <a href="@IMAGES@lj-cover140.png">
+    <img src="@IMAGES@lj-cover140-small.png" align="right" alt="linux journal cover">
+  </a>
+
     El periódico belga <em>De Standaard</em> investiga cuáles son las motivaciones de los autores de software libre en un artículo titulado <em><a href="http://www.standaard.be/Artikel/Detail.aspx?artikelId=G42H5GD6">Delen van
     KENNIS zonder WINSTBEJAG</em></a> <font size=-1>(Compartir información sin ánimo de lucro)</font> en su `DS2 bijlage'. Se usa a LilyPond como ejemplo y en el artículo se intercalan citas de una 'entrevista por e-mail' hecha a Jan Nieuwenhuizen. Esto marca la primera aparición de LilyPond en la prensa escrita.
 
