Image now correctly placed and new article added

--- a/es/about/pubs.html
+++ b/es/about/pubs.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: b546edbe7abaf202bb086dceafb2a56492b896f7
+    Translation of GIT Committish: 5f32c38d36da1f8a7c954c71962863dad8960042
 
     When revising a translation, copy the HEAD committish of the
     version that you are working on.  Refer to `UPDATE A TRANSLATION'
@@ -29,16 +29,27 @@ Lo que nosotros hemos escrito:
 </ul>
 
 Lo que han escrito otros:
-
-<a href="@IMAGES@lj-cover140.png">
-  <img src="@IMAGES@lj-cover140-small.png" align="right" alt="linux journal cover">
-</a>
   
 <dl>
+
+  <dt>Febrero de 2008</dt>
+  <dd> En
+    unos <a href="http://www.musicbyandrew.ca/finale-lilypond-1.html">artículos
+    de su página personal</a>, Andrew Hawryluk hace una comparación en
+    términos generales entre y LilyPond, y evalúa en detalle las
+    capacidades de grabado tipográfico de los dos programas.  El
+    segundo artículo es un ilustrador análisis de la composición
+    tipográfica del preludio número 6 de Rachmaninoff, con una
+    comparación frente a una edición de referencia grabada a mano.
+  </dd>
+
   <dt>Diciembre de 2005</dt>
   <dd>
-
-    Linux Journal publica un artículo sobre 
+    <a href="@IMAGES@lj-cover140.png">
+      <img src="@IMAGES@lj-cover140-small.png" align="right" alt="linux journal cover">
+    </a>
+ 
+   Linux Journal publica un artículo sobre
       <a href="http://www.linuxjournal.com/article/8364"><em>Haga diagramas de Schenker impresionantes con GNU LilyPond</em></a>. Es un artículo profundo pero práctico con nítidos gráficos de LilyPond.
 
     <br>El autor Kris Shaffer comenta 
