A better formatting of HTML code

--- a/es/about/thanks.html
+++ b/es/about/thanks.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: c9c8a55b173151df04eb864643fb740a850e4988
+    Translation of GIT Committish: 6fd01c0a672cd77c2826f06df0ed56b6c08f3d1f
 
     When revising a translation, copy the HEAD committish of the
     version that you are working on.  Refer to `UPDATE A TRANSLATION'
@@ -11,30 +11,40 @@
 <ul>
   <li>Han-Wen Nienhuys y Jan Nieuwenhuizen, desarrolladores principales
 	<p>
-	Jan actualmente trabaja como programador y especialista Open Source. Toca la viola. Han-Wen está desarrollando una compañía de soporte para LilyPond. En su tiempo libre, intenta dominar la trompa.
+	  Jan actualmente trabaja como programador y especialista Open
+	  Source. Toca la viola. Han-Wen está desarrollando una
+	  compañía de soporte para LilyPond. En su tiempo libre,
+	  intenta dominar la trompa.
 	</p>
 	<p>
-Jan y Han-Wen se conocieron en una orquesta juvenil en los Países Bajos. Durante
-esta época, Jan se interesó en los preprocesadores MusicTex, y contagió su
-interés a Han-Wen. Al unírsele, decidieron empezar desde cero con un enfoque
-completamente distinto. Lo que creamos se conoce ahora como LilyPond.
+	  Jan y Han-Wen se conocieron en una orquesta juvenil en los
+	  Países Bajos. Durante esta época, Jan se interesó en los
+	  preprocesadores MusicTex, y contagió su interés a
+	  Han-Wen. Al unírsele, decidieron empezar desde cero con un
+	  enfoque completamente distinto. Lo que creamos se conoce
+	  ahora como LilyPond.
 	</p>
 	<p>
 	  <a href="name.html">Acerca del origen</a> del nombre &lsquo;LilyPond&rsquo;
 	</p>
   </li>
 
-  <li>Graham Percival, editor de la documentación y Bug Meister (Maestro a cargo de los Fallos)
+  <li>Graham Percival, editor de la documentación y Bug Meister
+  (Maestro a cargo de los Fallos)
 	<p>
-Graham es un estudiante graduado que trabaja en  proyectos de entrenamiento de instrumentos musicales asistido por ordenador.  Su interés se centra en la escritura de software para el apoyo al aprendizaje del violín, la viola o el cello por parte de los alumnos.
+	  Graham es un estudiante graduado que trabaja en proyectos de
+	  entrenamiento de instrumentos musicales asistido por
+	  ordenador.  Su interés se centra en la escritura de software
+	  para el apoyo al aprendizaje del violín, la viola o el cello
+	  por parte de los alumnos.
 	</p>
   </li>
 
   <li>Pedro Kroeger, Build meister (maestro compilador)
 	<p>
-Pedro es profesor de composición, armonía y contrapunto en la Universidad
-Federal de Bahía (Brasil). En su tiempo libre, disfruta tocando la viola
-y hackeando algo de código.
+	  Pedro es profesor de composición, armonía y contrapunto en
+	  la Universidad Federal de Bahía (Brasil). En su tiempo
+	  libre, disfruta tocando la viola y hackeando algo de código.
 	</p>
   </li>
 
@@ -56,8 +66,10 @@ y hackeando algo de código.
 
 <h2>Gracias a...</h2>
 
-...todos los <a
-href="@DOC@latest/Documentation/topdocs/AUTHORS.html">hackers de LilyPond</a>,  cazadores de fallos y usuarios. En especial nuestro mayor agradecimiento es para
+...todos
+los <a href="@DOC@latest/Documentation/topdocs/AUTHORS.html">hackers
+de LilyPond</a>, cazadores de fallos y usuarios. En especial nuestro
+mayor agradecimiento es para
 
 <ul>
 	<li>Werner Lemberg por su TeXperiencia</li>
