French web updates

--- a/fr/about/automated-engraving/conclusion.html
+++ b/fr/about/automated-engraving/conclusion.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: dfac495ce530710defeff84032b9d75b12bac373
+    Translation of GIT Committish: adb47bb2fe7134c10f12fce7eba3984228e547e4
 
 
 
@@ -14,11 +14,21 @@
 
 <h2>Conclusion</h2>
 
+<p>
 Nous vous avons montr&eacute; ce que devrait &ecirc;tre la gravure musicale, et comment
 nous avons construit notre logiciel pour imiter cette apparence. Nous 
 nous sommes &eacute;norm&eacute;ment investis dans cette construction. En guise de 
 r&eacute;compense pour ce long travail, vous pouvez &agrave; votre tour <a
 href="@DEPTH@switch/tour.html">utiliser le programme pour imprimer votre musique</a>.
+</p>
+
+<p>
+Pour compl&eacute;ter la lecture de cet essai, ne manquez pas de consulter
+les <a href="@DEPTH@about/pubs.html">publications and articles</a>, et
+tout particuli&egrave;rement
+le <a href="http://www.musicbyandrew.ca/finale-lilypond-1.html">comparatif
+d'Andrew Hawryluk</a> entre Finale et LilyPond.
+</p>
 
 
 <p align="right">
