--- a/fr/about/pubs.html
+++ b/fr/about/pubs.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: dfac495ce530710defeff84032b9d75b12bac373
+    Translation of GIT Committish: adb47bb2fe7134c10f12fce7eba3984228e547e4
 
 
 
@@ -28,10 +28,10 @@ Nos articles&nbsp;:
 href="@IMAGES@FISL7-slides.pdf">PDF 1095 ko</a>)
 
 <li>
-   Erik Sandberg, <em>Séparer le langage source et le système de
+   Erik Sandberg, <em>S&eacute;parer le langage source et le syst&egrave;me de
    formatage dans GNU LilyPond</em> (Separating input language and
-   formatter in GNU Lilypond). Thèse de Master, Université d'Uppsala,
-   Département d'informatique, mars 2006.
+   formatter in GNU Lilypond). Th&egrave;se de Master, Universit&eacute; d'Uppsala,
+   D&eacute;partement d'informatique, mars 2006.
 (<a href="@IMAGES@thesis-erik-sandberg.pdf">PDF 750 ko</a>)
 </ul>
 
@@ -44,6 +44,16 @@ cover">
 </a>
 
 <dl>
+  <dt>F&eacute;vrier 2008</dt>
+  <dd>
+    Sur <a href="http://www.musicbyandrew.ca/finale-lilypond-1.html">son
+    site personnel</a>, Andrew Hawryluk propose une comparaison entre
+    Finale et LilyPond, tant au niveau de leurs caract&eacute;ristiques
+    g&eacute;n&eacute;rales que de leurs capacit&eacute;s respectives en mati&egrave;re de
+    gravure. Un second article analyse la gravure du sixi&egrave;me pr&eacute;lude
+    pour piano de Rachmaninoff, de basant sur une version artisanale.
+  </dd>
+
   <dt>D&eacute;cembre 2005</dt>
   <dd>
     <em>Linux Journal</em> publie un article sur
