--- a/fr/about/pubs.html
+++ b/fr/about/pubs.html
@@ -1,9 +1,5 @@
 <!--
-    Translation of GIT Committish: adb47bb2fe7134c10f12fce7eba3984228e547e4
-
-
-
-
+    Translation of GIT Committish: ee82d7a24da193d72059aaac766968ab28c238cf
 
     When revising a translation, copy the HEAD committish of the
     version that you are working on.  Refer to `UPDATE A TRANSLATION'
@@ -38,24 +34,26 @@ href="@IMAGES@FISL7-slides.pdf">PDF 1095 ko</a>)
 
 D'autres articles&nbsp;:
 
-<a href="@IMAGES@lj-cover140.png">
-<img src="@IMAGES@lj-cover140.png" align="right" alt="linux journal
-cover">
-</a>
-
 <dl>
   <dt>F&eacute;vrier 2008</dt>
   <dd>
     Sur <a href="http://www.musicbyandrew.ca/finale-lilypond-1.html">son
     site personnel</a>, Andrew Hawryluk propose une comparaison entre
-    Finale et LilyPond, tant au niveau de leurs caract&eacute;ristiques
-    g&eacute;n&eacute;rales que de leurs capacit&eacute;s respectives en mati&egrave;re de
-    gravure. Un second article analyse la gravure du sixi&egrave;me pr&eacute;lude
-    pour piano de Rachmaninoff, de basant sur une version artisanale.
+    Finale et LilyPond, tant au niveau de leurs
+    caract&eacute;ristiques g&eacute;n&eacute;rales que de leurs
+    capacit&eacute;s respectives en mati&egrave;re de gravure. Un
+    second article analyse la gravure du sixi&egrave;me pr&eacute;lude
+    pour piano de Rachmaninoff, se basant sur une &eacute;dition de grande
+    qualit&eacute; grav&eacute;e &agrave; la main.
   </dd>
 
   <dt>D&eacute;cembre 2005</dt>
   <dd>
+<a href="@IMAGES@lj-cover140.png">
+<img src="@IMAGES@lj-cover140.png" align="right" alt="linux journal
+cover">
+</a>
+
     <em>Linux Journal</em> publie un article sur
     <a href="http://www.linuxjournal.com/article/8364"><em>de
     stup&eacute;fiants graphiques [d'analyse Schenkerienne] avec GNU
