--- a/site/old-news.html
+++ b/site/old-news.html
@@ -20,6 +20,15 @@
     <td>
       <dl>
   <dt>
+    <b>LilyPond 2.11.37 available</b> -
+    <em>January 3, 2008</em>
+  </dt>
+  <dd>
+    Release 2.11.37 is available. It has a few bugfixes, and
+    documentation changes. (<a href="install/#2.11">Download</a>)
+  </dd>
+
+  <dt>
     <b>LilyPond 2.11.36 available</b> -
     <em>December 13, 2007</em>
   </dt>
