--- a/es/install/index.html
+++ b/es/install/index.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: 0f7f5743a43e7522782075c29a6bde37ff00bd02
+    Translation of GIT Committish: 4d189053fb59738c8527e0bbb2eeb1bb8b76c77d
 
     When revising a translation, copy the HEAD committish of the
     version that you are working on.  Refer to `UPDATE A TRANSLATION'
@@ -16,7 +16,7 @@
 
 
 
-<h2>Descargar LilyPond 2.10 -- rama estable</h2>
+<h2>Descargar LilyPond 2.10 (rama estable)</h2>
 
 <a name="2.10"></a>
 <table width="100%" border="0" rules="rows" cellpadding="3">
@@ -35,7 +35,7 @@
 
 </table>
 
-<h2>Descargue LilyPond 2.11 -- rama de desarrollo</h2>
+<h2>Descargue LilyPond 2.11 (rama de desarrollo)</h2>
 
 <a name="2.11"></a>
 <table width="100%" border="0" rules="rows" cellpadding="3">
@@ -58,30 +58,35 @@
 
 <h2>Versiones anteriores</h2>
 <p>
-	Si cree que Lily se mueve demasiado rápido, pruebe una de nuestras 
-  <a href="older-versions.html">versiones antiguas</a>
-  o diríjase directamente a la <a href="http://download.linuxaudio.org/lilypond/binaries/">página de descarga</a>.
+  Si cree que Lily se mueve demasiado rápido, pruebe una de nuestras
+  <a href="older-versions.html">versiones antiguas</a> o diríjase
+  directamente a
+  la <a href="http://download.linuxaudio.org/lilypond/binaries/">página
+  de descarga</a>.
 </p>
 
 <h2>Patrocinadores</h2>
 
 Nuestro agradecimiento a <a href="http://www.vt.edu">Virginia Tech</a> y a
-<a href="http://www.linuxaudio.org">linuxaudio.org</a> por patrocinar 
+<a href="http://www.linuxaudio.org">linuxaudio.org</a> por patrocinar
 nuestro ancho de banda.
 <p>
-	<img src="http://lau.linuxaudio.org/images/VTlogo_ITF.gif">
-	<img src="http://linuxaudio.org/en/linuxaudio.png" width="250">
+  <img src="http://lau.linuxaudio.org/images/VTlogo_ITF.gif">
+  <img src="http://www.linuxaudio.org/files/logo/lao_banner_06_on_white_demo.png">
 </p>
 
 <h2>Notas</h2>
 
 <p>
-Los instaladores de las versiones compiladas están hechos con GUB. Consulte el <a
-href="http://git.sv.gnu.org/gitweb/?p=lilypond.git;a=blob_plain;f=README;hb=gub">LÉAME de GUB</a> para ver más información sobre GUB.
+  Los instaladores de las versiones compiladas están hechos con
+  GUB. Consulte
+  el <a href="http://git.sv.gnu.org/gitweb/?p=lilypond.git;a=blob_plain;f=README;hb=gub">LÉAME
+  de GUB</a> para ver más información sobre GUB.
 </p>
 
 <p>
-Se reconoce el copyright y las marcas registradas de todos los logotipos e imágenes de producto.
+  Se reconoce el copyright y las marcas registradas de todos los
+  logotipos e imágenes de producto.
 </p>
 
 <p>
