--- a/es/switch/howto.html
+++ b/es/switch/howto.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: 0f7f5743a43e7522782075c29a6bde37ff00bd02
+    Translation of GIT Committish: 4d189053fb59738c8527e0bbb2eeb1bb8b76c77d
 
     When revising a translation, copy the HEAD committish of the
     version that you are working on.  Refer to `UPDATE A TRANSLATION'
@@ -26,7 +26,7 @@
 </p>
 
 
-<h2>Es tan fácil como A B C</h2>
+<h2>Es tan fácil como "A, B, C"</h2>
 
 Las notas se codifican mediante letras y números. Las instrucciones especiales
 se escriben mediante barras invertidas «\».
