Update the German translation Add information about www.lilypondforum.de

--- a/de/about/faq.html
+++ b/de/about/faq.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: 4e7730c56090e084cb594d438ab561b5106eed23
+    Translation of GIT Committish: 0d0c0f7d3aa17d622974c8cb80250ec32c389ff6
 
 
 
@@ -197,7 +197,7 @@ Wir haben folgende Anspr&uuml;che: Die Sprache muss
 <h3>Wie kann ich diese Sprache lernen?</h3>
 <p>
   Schauen Sie sich die
-  <a href="@DOC@stable/Documentation/user/lilypond/Tutorial.html">Übung</a> an.
+  <a href="@DOC@stable/Documentation/user/lilypond/Tutorial.html">&Uuml;bung</a> an.
   Sie ist ziemlich kurz, in leicht verst&auml;ndliche Happen aufgeteilt und wir haben
   uns M&uuml;he gegeben, sie didaktisch aufzuarbeiten. Wenn Sie lieber einfach
   herumprobieren wollen, k&ouml;nnen Sie Beispiele kriegen, indem Sie auf die Notenbilder
@@ -220,7 +220,7 @@ Wir haben folgende Anspr&uuml;che: Die Sprache muss
   <tt>convert-ly</tt> kann allerdings nur richtig funtionieren,
   wenn es wei&szlig;, f&uuml;r welche Programmversion die Eingabedatei
   urspr&uuml;nglich geschrieben war. Darum ist es sehr wichtig, die
-  <code>version</code> am Anfang der Datei mitzuteilen, z. B. so: <xmp>
+  <code>Version</code> am Anfang der Datei mitzuteilen, z. B. so: <xmp>
     \version "2.8.4" </xmp>
 </p>
 <p>
@@ -282,17 +282,17 @@ Versuchen sie folgende M&ouml;glichkeiten:
   </dd>
 
   <dt>
-    ETF</dt><dd> LilyPond enth&auml;lt etf2ly, ein Konvertierungsprogramm f&uuml; Finales ETF-Format (<a href="../devel/misc/etfformat.html">&Uuml;ber ETF</a>).
+    ETF</dt><dd> LilyPond enth&auml;lt etf2ly, ein Konvertierungsprogramm f&uuml;r Finales ETF-Format (<a href="../devel/misc/etfformat.html">&Uuml;ber ETF</a>).
   </dd>
 
   <dt>
-    ABC</dt><dd> LilyPond beinhaltet abc2ly, ein Konvertierungsprogramm f&uuml; 
+    ABC</dt><dd> LilyPond beinhaltet abc2ly, ein Konvertierungsprogramm f&uuml;r 
 das beliebte ABC-Format (<a href="http://www.gre.ac.uk/~c.walshaw/abc/">&Uuml;ber ABC</a>).
   </dd>
 
   <dt>
-    MusicXML</dt><dd> LilyPond beinhaltet <code>musicxml2ly</code> a
-    ein teilweises Konvertierungsprogramm von MusicXML; auch Guido Amorusos <a
+    MusicXML</dt><dd> LilyPond beinhaltet <code>musicxml2ly</code>
+    ein ausgereiftes Konvertierungsprogramm von MusicXML; auch Guido Amorusos <a
     href="http://lists.gnu.org/archive/html/lilypond-user/2005-12/msg00107.html">xml2ly</a>
     kann MusicXML in LilyPond umwandeln (<a
     href="http://www.musicxml.org/">&Uuml;ber MusicXML</a>).  </dd>
@@ -315,8 +315,7 @@ das beliebte ABC-Format (<a href="http://www.gre.ac.uk/~c.walshaw/abc/">&Uuml;be
 <p>
   Wir haben leider keine Zeit, auch noch eine graphische Benutzerschnittstelle
   zu programmieren. Zum Gl&uuml;ck haben andere Leute diesen Mangel
-  behoben. Folgende Programme haben sehr gute LilyPond-Exportfunktionen
-  und sind in konstanter Entwicklung:
+  behoben. Folgende Programme haben sehr gute LilyPond-Exportfunktionen:
 </p>
 
 <ul>
@@ -363,12 +362,15 @@ Es gibt auch noch zwei nicht graphische Schnittstellen:
 
 <h3>Hilfe, es funktioniert einfach nicht. Wer kann mit helfen?</h3>
 <p>
-  Sie k&ouml;nnen an die lilypond-Benutzerliste (auf
+  Sie k&ouml;nnen an die englischsprachige lilypond-Benutzerliste (auf
    <a
 href="http://mail.gnu.org/mailman/listinfo/lilypond-user">http://mail.gnu.org/mailman/listinfo/lilypond-user</a>) schreiben. Es ist auch eine gute Idee, die Archive nach Antworten
 zu durchsuchen, die sich unter
 der Adresse <a
 href="http://mail.gnu.org/archive/html/lilypond-user/">http://mail.gnu.org/archive/html/lilypond-user/</a> finden lassen.
+</p>
+<p> F&uuml;r deutsche Benutzer gibt es noch das <a href="http://www.lilypondforum.de">Lilypond-Forum</a>, auf dem
+Fragen beantwortet werden.
 </p>
 
 <a name="bugreport"></a>
